[package]
name = "drive-image-searcher"
version = "0.2.0"
edition = "2021"

license = "BSD-3-Clause"
description = "A CLI tool to stream a drive image, and search for one or more byte patterns"
repository = "https://github.com/RecRanger/drive-image-searcher"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["cargo"] }

serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.116"

polars = { version = "0.39.2", features = ["lazy", "json"] }

env_logger = "0.11.3"
log = "0.4.21"
memmap = "0.7.0"
num-format = "0.4.4"
thousands = "0.2.0"
num-traits = "0.2.18"
rand = "0.8.5"

chrono = "0.4.38"
md5 = "0.7.0"
hex = "0.4.3"

xz2 = "0.1.7"

lz4_flex = "0.11.3"
