[package]
name = "drive-image-searcher"
version = "0.2.2"
edition = "2024"

license = "BSD-3-Clause"
description = "A CLI tool to stream a drive image, and search for one or more byte patterns"
repository = "https://github.com/RecRanger/drive-image-searcher"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["cargo"] }

serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.116"

polars = { version = "0.39.2", features = ["lazy", "json"] }

log = "0.4.21"
num-format = "0.4.4"
thousands = "0.2.0"
num-traits = "0.2.18"
rand = "0.8.5"

chrono = "0.4.38"
md5 = "0.7.0"
hex = "0.4.3"

fern = "0.6.2"
humantime = "2.1.0"

memmap2 = "0.9.9"
indicatif = "0.18.3"
